ToontownInfiniteRetro/logs/tti-retro-140510_231435.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  tti-retro-dev
{401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x246A7F58>}
{401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x246A7F58>}
{401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x246A7F58>}
{401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x246A7F58>}
entering active SC menu
local
8
Reading DNA file... phase_4/dna/storage.dna
Reading DNA file... phase_3.5/dna/storage_interior.dna
Reading DNA file... phase_4/dna/storage_TT.dna
Reading DNA file... phase_4/dna/storage_TT_sz.dna
Reading DNA file... phase_4/dna/toontown_central_sz.dna
fisherman origin:  render/loader_data/toontownCentral/fishing_pond_1/npc_fisherman_origin_0
Reading DNA file... phase_5/dna/storage_town.dna
Reading DNA file... phase_5/dna/storage_TT_town.dna
Reading DNA file... phase_5/dna/toontown_central_2200.dna
DNALandmarkBuilding sb42:toon_landmark_hqTT_DNARoot did not find **/*suit_building_origin
Traceback (most recent call last):
  File "C:\Panda3D-1.9.0\direct\distributed\ConnectionRepository.py", line 613, in readerPollUntilEmpty
    while self.readerPollOnce():
  File "C:\Panda3D-1.9.0\direct\distributed\ConnectionRepository.py", line 620, in readerPollOnce
    self.handleDatagram(self.private__di)
  File "otp\distributed\OTPClientRepository.py", line 1882, in handleDatagram
    self.handler(msgType, di)
  File "otp\distributed\OTPClientRepository.py", line 1493, in handlePlayGame
    self.handleUpdateField(di)
  File "otp\distributed\OTPClientRepository.py", line 2200, in handleUpdateField
    self.__doUpdate(doId, di, ovUpdated)
  File "otp\distributed\OTPClientRepository.py", line 2208, in __doUpdate
    do.dclass.receiveUpdate(do, di)
  File "toontown\toon\DistributedNPCToon.py", line 195, in setMovie
    self.curQuestMovie.play()
  File "toontown\quest\QuestParser.py", line 420, in play
    iList.append(self.parseFunction(line))
  File "toontown\quest\QuestParser.py", line 860, in parseFunction
    cfunc = compile('object' + '.' + functionName, '<string>', 'eval')
  File "<string>", line 1
    object."angryEyes"
                     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "otp\otpbase\OTPBase.py", line 234, in run
    taskMgr.run()
  File "C:\Panda3D-1.9.0\direct\task\Task.py", line 502, in run
    self.step()
  File "C:\Panda3D-1.9.0\direct\task\Task.py", line 460, in step
    self.mgr.poll()
  File "C:\Panda3D-1.9.0\direct\distributed\ConnectionRepository.py", line 613, in readerPollUntilEmpty
    while self.readerPollOnce():
  File "C:\Panda3D-1.9.0\direct\distributed\ConnectionRepository.py", line 620, in readerPollOnce
    self.handleDatagram(self.private__di)
  File "otp\distributed\OTPClientRepository.py", line 1882, in handleDatagram
    self.handler(msgType, di)
  File "otp\distributed\OTPClientRepository.py", line 1493, in handlePlayGame
    self.handleUpdateField(di)
  File "otp\distributed\OTPClientRepository.py", line 2200, in handleUpdateField
    self.__doUpdate(doId, di, ovUpdated)
  File "otp\distributed\OTPClientRepository.py", line 2208, in __doUpdate
    do.dclass.receiveUpdate(do, di)
  File "toontown\toon\DistributedNPCToon.py", line 195, in setMovie
    self.curQuestMovie.play()
  File "toontown\quest\QuestParser.py", line 420, in play
    iList.append(self.parseFunction(line))
  File "toontown\quest\QuestParser.py", line 860, in parseFunction
    cfunc = compile('object' + '.' + functionName, '<string>', 'eval')
  File "<string>", line 1
    object."angryEyes"
                     ^
SyntaxError: invalid syntax
